<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.details.DetailsActivity">


        <!-- RecyclerView for Steps -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_step_label" />


        <!-- Steps label for RecyclerView -->
        <TextView
            android:id="@+id/tv_step_label"
            style="@style/LabelRecyclerView"
            android:text="@string/steps_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_ingredient" />


        <!-- Recipe image -->
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/brown" />


        <!-- RecyclerView for ingredients -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_label" />


        <!-- Ingredients label for RecyclerView -->
        <TextView
            android:id="@+id/tv_ingredient_label"
            style="@style/LabelRecyclerView"
            android:text="@string/ingredients_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_name" />


        <!-- Recipe name -->
        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="Brownies" />


        <!-- hot recipes.dessert label -->
        <TextView
            android:id="@+id/tv_sub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/hot_recipes_dessert"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />


        <!-- Numbers of ingredients -->
        <TextView
            android:id="@+id/tv_num_ingred"
            style="@style/NumbersStepsIngredients"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/image"
            tools:text="12" />


        <!-- Numbers of steps -->
        <TextView
            android:id="@+id/tv_num_steps"
            style="@style/NumbersStepsIngredients"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_num_ingred"
            app:layout_constraintStart_toStartOf="@+id/tv_num_ingred"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_ingred"
            tools:text="8" />


        <!-- Ingredients label -->
        <TextView
            android:id="@+id/textView5"
            style="@style/MiniLabels"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/ingredient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />


        <!-- Steps label -->
        <TextView
            android:id="@+id/textView7"
            style="@style/MiniLabels"
            android:text="@string/step"
            app:layout_constraintBottom_toBottomOf="@+id/tv_num_steps"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/tv_num_steps" />


        <!-- Back button -->
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/back_button"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_white_48" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>